--- a/config/1.yml
+++ b/config/1.yml
@@ -1,7 +1,7 @@
-NUM_LABELS: 10
-IMAGE_SIZE: 28
-NUM_ITER: 1000
-K: 5
-C1: 8
-C2: 16
-P: 256
+num_labels: 10
+image_size: 28
+num_iter: 1000
+k: 5
+c1: 8
+c2: 16
+p: 256
